--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head lang="en">
     <meta charset="UTF-8"/>
-    <title>ReactJS + Spring Data REST</title>
+    <title>ReactJS + Spring Data REST!</title>
     <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
 
+<h1>Apartments</h1>
 <div id="react"></div>
 
 <script src="built/bundle.js"></script>
