--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,15 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8"/>
-    <title>ReactJS + Spring Data REST!</title>
-    <link rel="stylesheet" href="/main.css" />
+    <title>gated app</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
 
-<h1>Apartments</h1>
-<div id="react"></div>
+<div id="root"></div>
 
-<script src="built/bundle.js"></script>
+<script src="app.dist.js"></script>
 
 </body>
 </html>
